# lacolarij

./: .env.docker.example  .gitignore  CLAUDE.md  Makefile  Notes.md  README.md  config.example.toml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  config.py  main.py  pyproject.toml  test_jira_api.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: auth.py  relay.py  router.py  test.py  users.py
backend/app/core/: exceptions.py  security.py
backend/app/db/: __init__.py  database.py  repositories.py
backend/app/models/: __init__.py  connection.py  schemas.py  user.py
backend/app/services/: demo_init.py  relay_service.py
backend/app/services/mock_jira/: __init__.py  models.py  router.py
backend/data/: jiralocal.db
backend/poc/: main.py
backend/tests/: conftest.py  test_connection_repository.py  test_mock_jira.py  test_relay.py  test_security.py  test_user_repository.py
deployment/: deploy.bat  deploy.ps1  deploy.sh  docker-compose.postgres.yml  docker-compose.sqlite.yml  server_deploy.sh  stop.sh
docs/: Database.md  E2ETesting.md  TODOs.md  architecture.md  deployment_manual.md  project_state.md
docs/api/: openapi.yaml
docs/designs/: dummy-login-feature.md  dummy-login-mockup.md
docs/llm_use/: README.md  llm_readme.md  prompts.md
frontend/: .dockerignore  .prettierignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
scripts/: pwf.py  run-tests.sh  start-server.sh
(+310 files in other folders)
