[project]
name = "backend"
version = "0.1.0"
description = "JiraLocal backend - local-first JIRA client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.40.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "argon2-cffi>=23.1.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "__pycache__",
    ".venv",
    "poc",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
